Task #3
Song service as an Eureka client